@@ -39,7 +39,7 @@ namespace jccl
  *
  * Utility functions for handling the parsing of input files.
  */
-class JCCL_CLASS_API ParseUtil
+class JCCL_API ParseUtil
 {
 public:
    /**
